--- a/index.html
+++ b/index.html
@@ -1,68 +1,225 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="fa" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>The Fred Exam</title>
 
 <style>
-    body {
-        font-family: sans-serif;
-        background: #f2f2f2;
-        text-align: center;
-        padding: 40px 15px;
-    }
+/* --------------------------- */
+/*        GLOBAL STYLE        */
+/* --------------------------- */
+body {
+    margin: 0;
+    font-family: sans-serif;
+    background: linear-gradient(135deg,#4dd0e1,#3f51b5);
+    color: #222;
+    padding: 25px 12px;
+}
 
-    .card {
-        background: white;
-        padding: 25px;
-        border-radius: 22px;
-        max-width: 450px;
-        margin: auto;
-        box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-    }
+.container {
+    max-width: 480px;
+    margin: auto;
+}
 
-    h1 {
-        font-size: 32px;
-        font-weight: 900;
-        background: linear-gradient(90deg, #4e54c8, #8f94fb);
-        -webkit-background-clip: text;
-        color: transparent;
-        margin-bottom: 6px;
-    }
+/* --------------------------- */
+/*          HEADER             */
+/* --------------------------- */
 
-    .subtitle {
-        font-size: 13px;
-        color: #777;
-        font-weight: bold;
-        margin-bottom: 25px;
-    }
+.title {
+    font-size: 32px;
+    text-align: center;
+    color: white;
+    font-weight: 800;
+    margin-top: 10px;
+}
 
-    .btn {
-        background: linear-gradient(90deg, #4e54c8, #8f94fb);
-        color: white;
-        border: none;
-        padding: 15px 30px;
-        border-radius: 14px;
-        font-size: 17px;
-        font-weight: bold;
-        cursor: pointer;
-        width: 100%;
-    }
+.sub {
+    text-align: center;
+    color: white;
+    opacity: .85;
+    margin-top: 4px;
+}
 
-    .btn:hover {
-        opacity: 0.85;
-    }
+/* Moon Icon */
+.moon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: white;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    font-size: 24px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    box-shadow:0 4px 12px rgba(0,0,0,0.3);
+    z-index: 10;
+}
+
+/* --------------------------- */
+/*       RECORD BOX            */
+/* --------------------------- */
+
+.record-box {
+    margin-top: 25px;
+    background: linear-gradient(135deg,#ffe082,#ffca28);
+    border-radius: 22px;
+    padding: 22px;
+    text-align: center;
+    box-shadow: 0 10px 25px rgba(255,193,7,0.4);
+}
+
+.record-title {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.stars {
+    font-size: 26px;
+    margin: 10px 0;
+}
+
+/* --------------------------- */
+/*       REGISTER CARD         */
+/* --------------------------- */
+
+.card {
+    background: white;
+    border-radius: 28px;
+    padding: 25px;
+    margin-top: 25px;
+    box-shadow:0 12px 30px rgba(0,0,0,0.15);
+}
+
+.register-title {
+    font-weight:700;
+    font-size:22px;
+    margin:0;
+}
+
+.input {
+    width:100%;
+    padding:16px;
+    border-radius:14px;
+    border:2px solid #ccc;
+    margin-top:12px;
+    font-size:17px;
+    outline:none;
+}
+.input:focus {
+    border-color:#42a5f5;
+}
+
+.btn-green {
+    width:100%;
+    background:#4caf50;
+    padding:16px;
+    border-radius:16px;
+    border:none;
+    margin-top:15px;
+    color:white;
+    font-size:20px;
+    font-weight:700;
+    box-shadow:0 7px 18px rgba(76,175,80,0.4);
+}
+
+/* --------------------------- */
+/*         MAIN BUTTON         */
+/* --------------------------- */
+
+.btn-main {
+    width:100%;
+    padding:18px;
+    border-radius:20px;
+    font-size:20px;
+    font-weight:700;
+    color:white;
+    text-align:center;
+    border:none;
+    background: linear-gradient(45deg,#673ab7,#3f51b5);
+    margin:15px 0;
+}
+
+/* --------------------------- */
+/*       WHITE BUTTONS         */
+/* --------------------------- */
+
+.btn-white {
+    width:100%;
+    padding:16px;
+    border-radius:20px;
+    font-size:18px;
+    background:white;
+    border:none;
+    box-shadow:0 4px 10px rgba(0,0,0,0.1);
+    margin-bottom:12px;
+    text-align:right;
+}
 </style>
 
 </head>
 
 <body>
-<div class="card">
-    <h1>The Fred Exam</h1>
-    <div class="subtitle">ارائه شده توسط <b>Fred</b></div>
 
-    <button class="btn">شروع مسابقه با ربات</button>
+<div class="moon">🌙</div>
+
+<div class="container">
+
+    <div class="title">The Fred Exam</div>
+    <div class="sub">ارائه شده توسط Fred</div>
+
+    <!-- RECORD BOX -->
+    <div class="record-box">
+        <div class="record-title">بهترین رکورد شما 🏆</div>
+        <div style="margin-top:8px;font-size:18px;">۰٪ – بدون عنوان</div>
+        <div style="font-size:14px;color:#444;margin-top:4px;">۱۴۰۴/۹/۴</div>
+        <div class="stars">☆ ☆ ☆ ☆ ☆</div>
+        <div style="font-size:15px;">مجموع ستاره‌ها: ۰ ⭐</div>
+    </div>
+
+    <!-- REGISTER CARD -->
+    <div class="card">
+        <h3 class="register-title">ثبت‌نام در سیستم 👤</h3>
+        <p style="color:#444;margin-top:6px;">برای ادامه، نام خود را وارد کنید:</p>
+
+        <input id="nameInput" class="input" placeholder="نام و نام خانوادگی...">
+
+        <button class="btn-green" onclick="saveName()">✔ ثبت نام و شروع</button>
+
+        <p style="font-size:13px;color:#777;margin-top:12px;">
+            🔒 اطلاعات شما فقط برای استفادهٔ آموزشی ذخیره می‌شود و محرمانه خواهد بود.
+        </p>
+    </div>
+
+    <!-- ACCESS PANEL -->
+    <div class="card" style="margin-top:25px;">
+
+        <h3 style="font-size:22px;margin-bottom:15px;">دسترسی‌ها</h3>
+
+        <button class="btn-white">👨‍🎓 ورود زبان‌آموز / ثبت‌نام</button>
+        <button class="btn-white">📈 مشاهده خلاصه عملکرد</button>
+        <button class="btn-white">📝 تست جدید</button>
+        <button class="btn-white">📊 تاریخچه</button>
+        <button class="btn-white">🔐 ورود مدیریت (Fred)</button>
+
+    </div>
+
 </div>
+
+<script>
+function saveName(){
+    let n = document.getElementById("nameInput").value.trim();
+    if(n.length < 2){
+        alert("لطفاً نام معتبر وارد کنید");
+        return;
+    }
+    localStorage.setItem("fred_name", n);
+    alert("ثبت شد! خوش اومدی " + n);
+}
+</script>
+
 </body>
 </html>
